tests/checker/bad/lib/BadPMLib.scillib
scilla_version 0

library BadPMLib

let badpm =
  fun (b : Bool) =>
    match b with
    | True => False
    end
